<resources>
    <string name="app_name">Refactoring Life Shop</string>

    <!--pre_login-->
    <string name="pre_login_tv_title">Refactoring Life \nAcademy</string>
    <string name="pre_login_tv_description">Refactoring Life</string>
    <string name="pre_login_btn_login">Log In</string>
    <string name="pre_login_btn_register">Register</string>
    <string name="pre_login_tv_support_message">If you have any issues, contact support</string>

    <!--login - register-->
    <string name="tie_email">Email</string>
    <string name="tie_password">Password</string>
    <string name="tie_confirm_password">Confirm Password</string>
    <string name="cb_show_password">Show Password</string>
    <string name="btn_enter">Enter</string>
    <string name="tv_error_message">User or password error!</string>
    <string name="login_tv_title">Log In</string>
    <string name="login_tv_register_here">Register here</string>
    <string name="login_tv_no_account">If you don\'t have an account,</string>
    <string name="register_tv_title">Register</string>
    <string name="register_email">Email</string>
    <string name="register_password">Password</string>
    <string name="register_confirm_password">Confirm Password</string>
    <string name="register_checkbox_show_password">Show Password</string>
    <string name="register_btn_enter">Enter</string>
    <string name="register_tv_yes_account">If you already have an account,</string>
    <string name="register_tv_login_here">log in here</string>

    <!-- Home -->
    <string name="no_content_message">Sorry, we could not find the content</string>
    <string name="retry_message">Retry</string>
    <string name="error_message">Sorry, we could not load the content</string>
    <string name="error_img_description">Error Image</string>
    <string name="item_rv_btn_text">See</string>
    <string name="home_icon_description">App Icon</string>
    <string name="home_sv_hint">Search in Refactoring Life Shop</string>
    <string name="home_heart_icon_description">Favorites</string>
    <string name="product_image_description">Product</string>
    <string name="daily_offer_title">Daily offer</string>
    <string name="last_visited_title">Last visited</string>
    <string name="send_message">"Send email"</string>
    <string name="support_message">If you have issues, contact <b>support</b></string>

    <!--login-->
    <string name="login_title">Log In</string>
    <string name="login_btn">Enter</string>
    <string name="login_password">Password</string>
    <string name="login_email">Email</string>
    <string name="login_checkbox_show_password">Show Password</string>
    <string name="login_register_here">Register here</string>
    <string name="login_no_account">If you don\'t have an account,</string>
    <string name="login_error">User or password error!</string>
    <string name="register_error">User or password error!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="comments_btn_buy">Buy</string>
    <string name="comments_comments">Comments</string>

    <!-- details -->
    <string name="image_description_back">Back Button</string>
    <string name="buy_button">Buy</string>
    <string name="button_product_description">T-shirt</string>
    <string name="button_colors_description">Color Palette</string>
    <string name="button_similar_description">store</string>
    <string name="button_product_title">Product</string>
    <string name="button_similar_title">Similar</string>
    <string name="button_colors_title">Colors</string>

    <!-- Fragment Financing -->
    <string name="Financing_img_description">Payment methods</string>
    <string name="financing_tv_title">Financing</string>

    <!-- Confirmation -->
    <string name="confirmation_message"><b>The seller will contact you shortly</b></string>

    <!-- Similar -->
    <string name="category">Category:</string>
</resources>
