<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_home"
    android:orientation="vertical"
    tools:context=".ui.confirmation.presenter.ConfirmationActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLine_header"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.37" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.94254446" />

    <LinearLayout
        android:id="@+id/header_home"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/bg_home_activity"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/guideLine_header"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="@dimen/margin_small"
                android:layout_marginBottom="5dp"
                android:contentDescription="@string/home_icon_description"
                android:src="@drawable/icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="@dimen/margin_small"
        android:layout_marginBottom="5dp"
        android:contentDescription="@string/home_icon_description"
        android:src="@drawable/ic_check"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_top" />

    <TextView
        android:id="@+id/confirmation_message"
        android:layout_width="209dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="2"
        android:text="@string/confirmation_message"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintBottom_toBottomOf="@id/guideline_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_top" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buy_product_button"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_marginTop="300dp"
        android:background="@drawable/bg_btn_enabled"
        android:elevation="10dp"
        android:gravity="center"
        android:text="@string/buy_button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintBottom_toTopOf="@id/guideline_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_top" />

    <!--        android:layout_marginEnd="45dp"-->
    <!--        android:layout_marginBottom="@dimen/margin_large"-->

    <TextView
        android:id="@+id/support_message_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/support_message"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_bottom" />

</androidx.constraintlayout.widget.ConstraintLayout>