<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.similar.presenter.SimilarActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_top"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_bottom"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.94" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_very_small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_category"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/category"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_name_category"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingStart="5dp"
                android:textSize="@dimen/text_size_medium"
                app:layout_constraintStart_toEndOf="@+id/tv_category" />

            <ImageView
                android:id="@+id/arrow_button"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginTop="@dimen/margin_standard"
                android:layout_marginEnd="25dp"
                android:contentDescription="@string/image_description_back"
                android:src="@drawable/arrow_left"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_search_similar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="@id/guideline_bottom"
            app:layout_constraintTop_toBottomOf="@id/guideline_top"
            tools:listitem="@layout/item_rv_search" />

        <include
            android:id="@+id/loading_screen_images"
            layout="@layout/loading_screen"
            android:visibility="gone" />

        <TextView
            android:id="@+id/support_message_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/support_message"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline_bottom" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>