<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_marginTop="12dp"
    android:layout_marginBottom="9dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:elevation="8dp"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/item_cv_product_image"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_small"
            app:cardCornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/item_product_image"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/product_image_description" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/item_product_brand"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_standard"
            android:layout_marginEnd="@dimen/margin_very_small"
            android:layout_marginTop="@dimen/margin_standard"
            android:maxLines="1"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/item_cv_product_image"
            app:layout_constraintEnd_toStartOf="@id/item_iv_add_favorites"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/product_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="@dimen/margin_very_small"
            android:layout_marginEnd="@dimen/margin_very_small"
            android:maxLines="1"
            android:textSize="@dimen/text_size_small"
            app:layout_constraintStart_toEndOf="@id/item_cv_product_image"
            app:layout_constraintEnd_toStartOf="@id/item_iv_add_favorites"
            app:layout_constraintTop_toBottomOf="@id/item_product_brand" />

        <TextView
            android:id="@+id/item_product_price"
            android:layout_width="125dp"
            android:layout_height="40dp"
            android:layout_marginStart="@dimen/margin_standard"
            android:layout_marginTop="@dimen/margin_standard"
            android:gravity="center_vertical"
            android:maxLength="7"
            android:maxLines="1"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/product_description"
            app:layout_constraintStart_toEndOf="@id/item_cv_product_image" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/see_product_button"
            android:layout_width="99dp"
            android:layout_height="30dp"
            android:layout_marginEnd="11dp"
            android:layout_marginBottom="13dp"
            android:background="@drawable/bg_btn_enabled"
            android:elevation="10dp"
            android:gravity="center"
            android:text="@string/item_rv_btn_text"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/item_iv_add_favorites"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="@dimen/margin_very_small"
            android:layout_marginEnd="@dimen/margin_very_small"
            android:contentDescription="@string/home_heart_icon_description"
            android:src="@drawable/icon_favorite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
